--- a/public/builder/editor.html
+++ b/public/builder/editor.html
@@ -1700,6 +1700,7 @@ let renameUrl = 'save.php?action=rename';
 let deleteUrl = 'save.php?action=delete';
 
 // let pages = [];
+let pagesData = null;
 
 let pages = (pagesData) ? pagesData : [];
 
