--- a/public/builder/editor.html
+++ b/public/builder/editor.html
@@ -1702,7 +1702,7 @@ let deleteUrl = 'save.php?action=delete';
 // let pages = [];
 let pagesData = null;
 
-let pages = (pagesData) ? pagesData : [];
+let pages = (REPLACE_PAGES_DATA) ? REPLACE_PAGES_DATA : [];
 
 	// [
 	// 	// {name:"narrow-jumbotron", title:"Jumbotron",  url: "demo/narrow-jumbotron/index.html", file: "demo/narrow-jumbotron/index.html", assets: ['demo/narrow-jumbotron/narrow-jumbotron.css']},
