--- a/public/builder/editor.html
+++ b/public/builder/editor.html
@@ -1704,7 +1704,7 @@ const user = searchParams.get('u');
 const project = searchParams.get('p');
 
 let pages = [
-    {name:"narrow-jumbotron", title:"Jumbotron",  url: "demo/narrow-jumbotron/index.html", file: "demo/narrow-jumbotron/index.html", assets: ['demo/narrow-jumbotron/narrow-jumbotron.css']},
+    // {name:"narrow-jumbotron", title:"Jumbotron",  url: "demo/narrow-jumbotron/index.html", file: "demo/narrow-jumbotron/index.html", assets: ['demo/narrow-jumbotron/narrow-jumbotron.css']},
     {name: project, title: project,  url: "projects/"+user+"/"+project+"/index.html", file: "projects/"+user+"/"+project+"/index.html", assets: []}
 ];
 
