--- a/public/builder/editor.html
+++ b/public/builder/editor.html
@@ -11,6 +11,8 @@
     <base href="">
     <title>Growmatic Builder</title>
 
+      <meta name="csrf-token" content="{{ csrf_token() }}">
+
     <link href="css/editor.css" rel="stylesheet">
 
       <style>
