--- a/public/builder/editor.html
+++ b/public/builder/editor.html
@@ -1751,6 +1751,7 @@ $(function() {
             //load code after page is loaded here
         });
 
+        console.log(pages)
 
         Vvveb.Gui.init();
         Vvveb.FileManager.init();
